# python-project-52

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
task_manager/: mixins.py  settings.py  tests.py  urls.py  views.py
task_manager/labels/: models.py  tests.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: models.py  tests.py  urls.py  views.py
task_manager/tasks/: models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  index.html
task_manager/templates/includes/: nav.html
task_manager/templates/labels/: list.html
task_manager/templates/statuses/: list.html
task_manager/templates/tasks/: detail.html  list.html
task_manager/templates/users/: list.html  user_list.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
