[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Raphael <raphael.mukha@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
